openturns/1.20/_sources/auto_data_analysis/estimate_dependency_and_copulas/index.rst.txt


.. _sphx_glr_auto_data_analysis_estimate_dependency_and_copulas:

.. _Estimate dependency and copulas:

Estimate dependency and copulas
-------------------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit a parametric copula">

.. only:: html

  .. image:: /auto_data_analysis/estimate_dependency_and_copulas/images/thumb/sphx_glr_plot_estimate_copula_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_copula.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit a parametric copula</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fit a non parametric copula">

.. only:: html

  .. image:: /auto_data_analysis/estimate_dependency_and_copulas/images/thumb/sphx_glr_plot_estimate_non_parametric_copula_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_estimate_dependency_and_copulas_plot_estimate_non_parametric_copula.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fit a non parametric copula</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_data_analysis/estimate_dependency_and_copulas/plot_estimate_copula
   /auto_data_analysis/estimate_dependency_and_copulas/plot_estimate_non_parametric_copula

